syntax = "proto3";
package api;

option go_package = "api";

// Post Service.
service Post {

    // GetPost takes in certain query params and returns a Post.
    rpc GetPost (PostSlug) returns (PostObject) {}
}

// PostSlug is the name of the post that is desired e.g. "post-you-may-like-2018-9".
message PostSlug {
    string name = 1;
}

// Post is the Post object that contains info about the post.
message PostObject {
    int64 id       = 1;
    string name    = 2;
    string content = 3;
}

